# copy-gif

./: .gitignore  README.md  ROADMAP.md  SETUP.md  background.js  content.js  manifest.json
installers/: README.md
installers/macos/: build-pkg.sh
installers/macos/scripts/: configure-extension-id.sh  postinstall
native-host/: Cargo.toml  README.md  com.copygif.host.json  copy-gif-host-wrapper.sh  copy-gif-host.py  install-native-host.bat  install-native-host.sh
native-host/src/: main.rs
